# Games_Engineering

./: CMakeLists.txt  README.md
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
practical_1/: main.cpp
practical_2/: Bullet.cpp  Bullet.h  Game.h  Ship.cpp  Ship.h  main.cpp
practical_3/: Entity.cpp  Entity.h  Player.cpp  Player.h  main.cpp
practical_4/: Entity.cpp  Entity.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Player.cpp  Player.h  SystemRenderer.cpp  SystemRenderer.h  cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_sprite.cpp  cmp_sprite.h  main.cpp  scene.h
